<resources>
    <string name="app_name">Blind chess</string>

    <string name="block_function">Функция временно недоступна(</string>
    <string name="error_server">Сервер погиб, но обещал воскреснуть(</string>

    <string name="title_login">Вход</string>
    <string name="title_registration">Регистрация</string>
    <string name="title_main_menu">Меню</string>
    <string name="title_achievements">Достижения</string>
    <string name="title_game_room">Игровая комната</string>
    <string name="error_login_email">Пользователь не найден</string>
    <string name="error_login_password">Неправильный пароль</string>

    <string name="login">Войти</string>
    <string name="edit_password">Пароль</string>
    <string name="edit_login">Логин</string>
    <string name="registration">Регистрация</string>

    <string name="text_registration_nickname">Никнейм</string>
    <string name="complete_registration">Зарегистрироваться</string>
    <string name="login_guest">Войти как гость</string>
    <string name="login_google">Войти через Google</string>
    <string name="error_input_nick_size">Ник должен состоять из 4 и более символов</string>
    <string name="error_input_login_size">Логин должен состоять из 6 и более символов</string>
    <string name="error_input_password_size">Пароль должен состоять из 6 и более символов</string>
    <string name="error_input_nick_symbols">Ник может состоять только из русских и английских букв, цифр и нижнего подчеркивания</string>
    <string name="error_input_login_symbols">Логин может состоять только из английских букв, цифр и нижнего подчеркивания</string>
    <string name="error_input_password_symbols">Пароль может состоять только из английских букв, цифр и нижнего подчеркивания</string>
    <string name="error_input">Некорректный ввод данных</string>
    <string name="error_name">Пользователь с таким именем уже существует</string>
    <string name="error_email">Пользователь с таким email уже существует</string>

    <string name="league">Лига:</string>
    <string name="button_friends">Друзья онлайн</string>
    <string name="button_achievements">Достижения</string>
    <string name="rating_game">Рейтинговый матч</string>
    <string name="friend_game">Играть с другом</string>
    <string name="quick_game">Быстрая игра</string>
    <string name="item_feedback">Обратная связь</string>
    <string name="item_to_back">Выйти</string>
    <string name="shop">Магазин</string>
    <string name="inventory">Инвентарь</string>

    <string name="dialog_viw_selecting_figure">Выберите фигуру</string>
    <string name="next">Далее</string>

    <string name="get_achievement">Получено новое достижение!</string>
    <string name="achievement_title_first_game">Первое сражение</string>
    <string name="achievement_description_first_game">Сыграть свою первую игру</string>
    <string name="achievement_image_name_first_game">achievement_first_match</string>
    <string name="achievement_title_first_win">Первая победа!</string>
    <string name="achievement_description_first_win">Одержать первую победу</string>
    <string name="achievement_image_name_first_win">achievement_first_win</string>
</resources>
